<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lotze.unclebenspopularmovies.AboutActivity"
    android:background="#a1a1a1a1"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/about_image_cinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@mipmap/cinema_background"
            android:scaleType="fitCenter"
            />




        <!--<android.support.v7.widget.CardView-->
            <!--android:id="@+id/card_my_name"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="-24dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginBottom="0dp"-->
            <!---->
            <!--app:cardBackgroundColor="@color/colorUiHeader"-->
            <!--&gt;-->

            <!--<android.support.constraint.ConstraintLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->


                <!--<TextView-->
                    <!--android:text="@string/app_name_full"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center_horizontal"-->
                    <!--android:paddingBottom="16dp"-->
                    <!--android:paddingLeft="16dp"-->
                    <!--android:paddingRight="16dp"-->
                    <!--android:paddingTop="16dp"-->

                    <!--android:textSize="24sp"-->

                    <!--android:textStyle="bold" />-->


            <!--</android.support.constraint.ConstraintLayout>-->


        <!--</android.support.v7.widget.CardView>-->



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_header_app_name"
                    android:text="@string/app_name_full"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:textSize="24sp"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"

                    android:textStyle="bold" />



                <!--<android.support.constraint.ConstraintLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--&gt;-->

                    <!--<android.support.v7.widget.CardView-->
                        <!--android:id="@+id/card_image_me"-->
                        <!--android:layout_width="100dp"-->
                        <!--android:layout_height="100dp"-->
                        <!--android:layout_marginLeft="16dp"-->
                        <!--android:layout_marginTop="16dp"-->
                        <!--app:cardCornerRadius="50dp"-->
                        <!--app:cardElevation="4dp"-->
                        <!--app:layout_constraintTop_toBottomOf="parent"-->
                        <!--app:layout_constraintLeft_toLeftOf="parent"-->
                        <!--app:layout_constraintStart_toStartOf="parent">-->

                        <!--<ImageView-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent"-->
                            <!--android:adjustViewBounds="true"-->
                            <!--android:scaleType="centerInside"-->
                            <!--app:srcCompat="@mipmap/me" />-->

                    <!--</android.support.v7.widget.CardView>-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_about_me"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="16dp"-->
                        <!--android:layout_marginRight="16dp"-->
                        <!--app:layout_constraintBottom_toTopOf="parent"-->
                        <!--app:layout_constraintTop_toBottomOf="parent"-->
                        <!--app:layout_constraintEnd_toEndOf="parent"-->
                        <!--app:layout_constraintLeft_toRightOf="@+id/card_image_me"-->
                        <!--app:layout_constraintRight_toRightOf="parent"-->
                        <!--app:layout_constraintStart_toEndOf="@+id/card_image_me"-->

                        <!--android:text="@string/about_me" />-->

                <!--</android.support.constraint.ConstraintLayout>-->


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">


                    <!--app:layout_constraintLeft_toLeftOf="@+id/card_image_me"-->
                    <!--app:layout_constraintStart_toStartOf="@+id/card_image_me"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/card_image_me"-->
                    <ImageView
                        android:id="@+id/iv_about_udacity"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/udacity_logo_640px_cut"

                        />
                    <TextView
                        android:id="@+id/tv_about_app"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/iv_about_udacity"
                        app:layout_constraintTop_toBottomOf="@+id/iv_about_udacity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/iv_about_udacity"
                        app:layout_constraintRight_toRightOf="parent"

                        app:layout_constraintStart_toEndOf="@+id/iv_about_udacity"

                        android:text="@string/about_app" />


                </android.support.constraint.ConstraintLayout>


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"

                    >

                    <!--app:layout_constraintLeft_toLeftOf="@+id/card_image_me"-->
                    <!--app:layout_constraintStart_toStartOf="@+id/card_image_me"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/iv_about_udacity"-->
                    <ImageView
                        android:id="@+id/iv_about_tmdb"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@mipmap/tmdb_208x226_stacked_green"
                        />

                    <TextView
                        android:id="@+id/tv_about_tmdb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/iv_about_tmdb"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_about_tmdb"

                        android:text="@string/about_tmdb" />


                </android.support.constraint.ConstraintLayout>


            </LinearLayout>





        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </android.support.v7.widget.CardView>


    </LinearLayout>




</ScrollView>
